The hello world client requires inetutils

--- a/services/hello-world-client/Makefile
+++ b/services/hello-world-client/Makefile
@@ -3,6 +3,7 @@ PREFIX = /usr/local
 all:
 	sed -e "s|@helloWorldHostname@|$(helloWorldHostname)|" \
 	    -e "s|@helloWorldPort@|$(helloWorldPort)|" \
+	    -e "s|@inetutils@|$(inetutils)|" \
 	hello-world-client.in > hello-world-client
 
 install:
