Add optional support for systemd's socket activation mechanism

--- a/services/hello-world-server/src/Makefile
+++ b/services/hello-world-server/src/Makefile
@@ -1,7 +1,11 @@
 CC = gcc
 
+ifeq ($(SYSTEMD_SOCKET_ACTIVATION),1)
+    EXTRA_BUILDFLAGS=-DSYSTEMD_SOCKET_ACTIVATION=1 $(shell pkg-config --cflags --libs libsystemd)
+endif
+
 all:
-	$(CC) hello-world-server.c -o hello-world-server
+	$(CC) $(EXTRA_BUILDFLAGS) hello-world-server.c -o hello-world-server
 
 install: all
 	install -d -m755 $(PREFIX)/bin
