--- a/services/disnix-tcp-proxy/scripts/wrapper.in
+++ b/services/disnix-tcp-proxy/scripts/wrapper.in
@@ -3,31 +3,26 @@
 export PATH=@PREFIX@/bin:$PATH
 
 case "$1" in
-    activate)
-	nohup disnix-tcp-proxy @srcPort@ @destHostname@ @destPort@ /tmp/disnix-tcp-proxy-@srcPort@.lock > /var/log/$(basename @PREFIX@).log & pid=$!
-	echo $pid > /var/run/$(basename @PREFIX@).pid
-        ;;
-    deactivate)
-        kill $(cat /var/run/@PREFIX@.pid)
-	rm -f /var/run/$(basename @PREFIX@).pid
-        ;;
     lock)
-    	if [ -f /tmp/disnix-tcp-proxy-@srcPort@.lock ]
-	then
-	    exit 1
-	else
-	    touch /tmp/disnix-tcp-proxy-@srcPort@.lock
-	    
-	    if [ -f /var/run/$(basename @PREFIX@).pid ]
-	    then
-		while [ "$(disnix-tcp-proxy-client)" != "0" ]
-		do
-	    	    sleep 1
-		done
-	    fi
-	fi
+        if [ -f /tmp/disnix-tcp-proxy-@srcPort@.lock ]
+        then
+            exit 1
+        else
+            touch /tmp/disnix-tcp-proxy-@srcPort@.lock
+
+            if [ "$(ps aux | grep disnix-tcp-proxy)" != "" ] # Only obtain a lock when the service is running
+            then
+                while [ "$(disnix-tcp-proxy-client)" != "0" ]
+                do
+                    sleep 1
+                done
+            fi
+        fi
         ;;
     unlock)
         rm -f /tmp/disnix-tcp-proxy-@srcPort@.lock
+        ;;
+    *)
+        @DYSNOMIA_MODULE@ "$1" "@PREFIX@"
         ;;
 esac
